--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
   // Setup Copilot extension
-  "name": "Copilot extension for Codespaces' VS Code"
+  "name": "Copilot extension for Codespaces' VS Code",
   "customizations": {
     "vscode": {
       "extensions": [
